<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClassServiceClient</string>
    <string name="start_button">Start Presentation</string>
    <string name="next_button">Next Slide</string>
    <string name="previous_button">Previous Slide</string>
    <string name="close_button">Close Presentation</string>
    <string name="send_button">Send File</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_choose_service">ChooseService</string>
    <string name="powerpointpresentation">PowerPoint Presentation</string>
    <string name="imagepresentation">Image Presentation</string>
    <string name="image_open_button">Open Image</string>
    <string name="close_image_button">Close Image</string>
    <string name="image_move_right_button">Right</string>
    <string name="image_move_left_button">Left</string>
    <string name="image_move_up_button">Up</string>
    <string name="image_move_down_button">Down</string>
    <string name="image_rotate_right_button">Rotate Right</string>
    <string name="image_rotate_left_button">Rotate Left</string>
    <string name="image_zoom_in_button">Zoom In</string>
    <string name="image_zoom_out_button">Zoom out</string>
    <string name="title_activity_image_presentation">ImagePresentation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_control_power_point">ControlPowerPointActivity</string>
    <string name="title_activity_control_image_presentation">ControlImagePresentationActivity</string>
    
    <string name="titlePrefs">Preferences</string>
    <string name="server">Server</string>
    <string name="summaryServer">Put the server IP</string>
    <string name="serverPort">Port</string>
    <string name="summaryServerPort">Put the server port</string>
    <string name="button_synchronize">Synchronize</string>

</resources>