<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlPowerPointActivity"
            android:padding="30dp" 
    		android:background="#0099cc"
            android:orientation="vertical" >    

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/next_button"
                android:onClick="goToNextSlide"
                android:layout_weight="1" />

            <Button
                android:id="@+id/previous"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/previous_button"
                android:onClick="goToPreviosuSlide"
                android:layout_weight="1" />
            
            <Button
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/close_button"
                android:onClick="closePresentation"
                android:layout_weight="1" />

</LinearLayout>