 <!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity" > -->

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

   <!-- <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" /> -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

  <!--    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >  -->

     <!--   <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/dummy_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button" />
        </LinearLayout> -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
    		xmlns:tools="http://schemas.android.com/tools"
    		android:background="#0099cc"
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <View
  				android:layout_width="1dp"
  				android:layout_height="0dp"
  				android:layout_weight="1">
			</View>
            
            <Button
                android:id="@+id/send"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/send_button"
                android:onClick="sendFile"  
                android:layout_weight="1" />

            <Button
                android:id="@+id/start"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/start_button"
                android:onClick="startPresentation"
                android:layout_weight="1" />

            <Button
                android:id="@+id/next"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/next_button"
                android:onClick="goToNextSlide"
                android:layout_weight="1" />

            <Button
                android:id="@+id/previous"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/previous_button"
                android:onClick="goToPreviosuSlide"
                android:layout_weight="1" />
            
            
            <Button
                android:id="@+id/close"
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:text="@string/close_button"
                android:onClick="closePresentation"
                android:layout_weight="1" />

        </LinearLayout>

   <!--  </FrameLayout>  -->

 <!-- </FrameLayout> -->